Add medical clinics page and images